# my-mcp-servers

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
script/: deploy.bat  deploy.sh
src/gen_images/: Dockerfile  README.md  bailian_mcpserver.py  docker-compose.yml.example
src/postgresql/: README.md  pg_mcpserver.py
tests/: bailian_mcpserver_test.py  pg_mcpserver_test.py
