[project]
name = "my-mcp-servers"
version = "0.1.6"
description = "Model Context Protocol servers for PostgreSQL and Alibaba Cloud Bailian image generation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "yidasanqian", email = "yidasanqian@gmail.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "postgresql", "alibaba-cloud", "bailian", "image-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.12.0",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/yidasanqian/my-mcp-servers"
Repository = "https://github.com/yidasanqian/my-mcp-servers"
Issues = "https://github.com/yidasanqian/my-mcp-servers/issues"

[project.scripts]
bailian-mcp-server = "gen_images.bailian_mcpserver:main"
postgresql-mcp-server = "postgresql.pg_mcpserver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
]
